# stretcher

./: CMakeLists.txt  README.txt  projectplan.gan
cmake/Modules/: FindLibconfig.cmake  FindLibmathplot.cmake  FindLibpugixml.cmake  FindWxctb.cmake
doc/: acronyms.docx
doc/doxygen/: Doxyfile
doc/memman/: documentation.tex
doc/memman/chapters/: experiments.tex  setup.tex
doc/usermanual/: documentation.aux  documentation.dvi  documentation.tex  documentation.toc
doc/usermanual/chapters/: experiments.aux  experiments.tex  graph.aux  graph.tex  protocol.aux  protocol.tex  setup.aux  setup.tex  startup.aux  startup.tex
include/: mathplot.h  ngl.h
include/ctb-0.13/: serport.h
src/: .gitignore  CMakeLists.txt  Stretcher.xmi  StretcherClass.xmi  main.cpp  main.h  mainpage.dox  protocols.cpp  protocols.h  settings.cpp  settings.h  stretcher.rc  updatedvalues.cpp  updatedvalues.h  updatedvaluesreceiver.cpp  updatedvaluesreceiver.h  updatedvaluessender.cpp  updatedvaluessender.h  updatevalues.cpp  updatevalues.h
src/experiments/: CMakeLists.txt  conditioning.cpp  conditioning.h  continuousevent.cpp  continuousevent.h  continuouseventvalues.cpp  continuouseventvalues.h  creep.cpp  creep.h  experiment.cpp  experiment.h  experimentdefinitions.h  experimentvalues.cpp  experimentvalues.h  fatiguetesting.cpp  fatiguetesting.h  onestepevent.cpp  onestepevent.h  onestepeventvalues.cpp  onestepeventvalues.h  pause.cpp  pause.h  pauseresume.cpp  pauseresume.h  pauseresumevalues.cpp  pauseresumevalues.h  pausevalues.cpp  pausevalues.h  phototrigger.cpp  phototrigger.h  phototriggervalues.cpp  phototriggervalues.h  preload.cpp  preload.h  preloadvalues.cpp  preloadvalues.h  ramp2failure.cpp  ramp2failure.h  relaxation.cpp  relaxation.h  (+4 more)
src/gpPanel/: CMakeLists.txt  mathplot.h
src/gui/: CMakeLists.txt  MyExportDialog_Base.xrc  MyFileOutput_Base.xrc  MyFrame_Base.xrc  MyHomeStages_Base.xrc  MyPauseDialog_Base.xrc  MyPorts_Base.xrc  MySamplingFrequency_Base.xrc  MyStartUpDialog_Base.xrc  increasedecreasevelocitytimer.cpp  increasedecreasevelocitytimer.h  mathplot.cpp  mathplot.h  mybutton.cpp  mybutton.h  myexportdialog.cpp  myexportdialog.h  myexportdialog_base.h  myfileoutput.cpp  myfileoutput.h  myfileoutput_base.cpp  myfileoutput_base.h  myfileoutput_base.xrs  myframe.cpp  myframe.cpp.autosave  myframe.h  myframe_base.cpp  myframe_base.h  myframe_base.xrs  myframe_base_INCLUDES.h  myframe_base_INCLUDES.h~  myframe_experiments.cpp  myframe_graph.cpp  myframe_presets.cpp  myframe_protocol.cpp  myframe_registration.cpp  mygraph.cpp  mygraph.h  myhomestages.cpp  myhomestages.h  (+29 more)
src/hardware/: CMakeLists.txt  forcesensor.cpp  forcesensor.h  forcesensormessagehandler.cpp  forcesensormessagehandler.h  linearmotor.cpp  linearmotor.h  linearmotor_old.cpp  linearmotor_old.h  linearstage.cpp  linearstage.h  linearstagemessagehandler.cpp  linearstagemessagehandler.h  messagehandler.cpp  messagehandler.h  serialinterface.cpp  serialinterface.h  serialtrigger.cpp  serialtrigger.h  stageframe.cpp  stageframe.h
src/pugixml/: CMakeLists.txt
test/: Testprotocol.ods
